PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/ApplicationTrainingCenter__c.object-meta.xml
<CustomObject>
    <label>수련원 신청내역</label>
    <nameField>
        <displayFormat>AT-{YYYYMM}-{00}</displayFormat>
        <label>수련원 신청 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>