PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/Bigo__c.field-meta.xml
<CustomField>
    <fullName>Bigo__c</fullName>
    <label>비고</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>