PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/BigoAdmin__c.field-meta.xml
<CustomField>
    <fullName>BigoAdmin__c</fullName>
    <inlineHelpText>일반 사용자에게 읽기 권한이 없는 관리자용 비고 항목입니다.</inlineHelpText>
    <label>비고 (관리자용)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>