PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/Date1__c.field-meta.xml
<CustomField>
    <fullName>Date1__c</fullName>
    <label>사용일1</label>
    <type>Date</type>
</CustomField>