PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/Date2__c.field-meta.xml
<CustomField>
    <fullName>Date2__c</fullName>
    <label>사용일2</label>
    <type>Date</type>
</CustomField>