PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/fm_Applicant__c.field-meta.xml
<CustomField>
    <fullName>fm_Applicant__c</fullName>
    <formula>Owner:User.FirstName + Owner:User.LastName</formula>
    <label>신청자</label>
    <type>Text</type>
</CustomField>