PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/fm_Summary__c.field-meta.xml
<CustomField>
    <fullName>fm_Summary__c</fullName>
    <formula>IF( ISPICKVAL( Status__c , &apos;확정&apos; ), &apos;[확정] &apos;, &apos;&apos;) &amp;
 TEXT(RoomType__c) &amp; &apos; &apos; &amp;  TEXT(UseType__c) &amp; &apos;(&apos; &amp; TEXT(Date1__c) &amp;
(IF( TEXT(UseType__c) = &apos;당일&apos;, NULL, &quot;~&quot; )) &amp;	
TEXT(IF( TEXT(UseType__c) = &apos;1박&apos;, Date1__c + 1, IF( TEXT(UseType__c) = &apos;2박&apos;, Date1__c + 2, NULL)))
&amp; &apos;) &apos; &amp;  Owner:User.LastName</formula>
    <label>요약</label>
    <type>Text</type>
</CustomField>