PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/fm_TrainingCenterLastUsedDate__c.field-meta.xml
<CustomField>
    <fullName>fm_TrainingCenterLastUsedDate__c</fullName>
    <formula>Owner:User.TrainingCenterLastUsedDate__c</formula>
    <label>최근 사용 일자</label>
    <type>Date</type>
</CustomField>