PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/fm_TrainingCenterUsedCount__c.field-meta.xml
<CustomField>
    <fullName>fm_TrainingCenterUsedCount__c</fullName>
    <formula>Owner:User.TrainingCenterUsedCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>총 사용 횟수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>