PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/MemberNumber__c.field-meta.xml
<CustomField>
    <fullName>MemberNumber__c</fullName>
    <label>인원</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>