PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/PayingUsageFee__c.field-meta.xml
<CustomField>
    <fullName>PayingUsageFee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>이용요금 지불</label>
    <type>Checkbox</type>
</CustomField>