PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/PersonalUse__c.field-meta.xml
<CustomField>
    <fullName>PersonalUse__c</fullName>
    <defaultValue>true</defaultValue>
    <label>본인사용 여부</label>
    <type>Checkbox</type>
</CustomField>