PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/RoomType__c.field-meta.xml
<CustomField>
    <fullName>RoomType__c</fullName>
    <label>객실유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>본채</fullName>
            </value>
            <value>
                <fullName>글램핑1</fullName>
            </value>
            <value>
                <fullName>글램핑2</fullName>
            </value>
            <value>
                <fullName>글램핑3</fullName>
            </value>
            <value>
                <fullName>글램핑4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>