PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <description>수련원 신청 활성/비활성 관리를 위한 필드 (일반 수련원 신청 레코드의 경우 빈칸). 활성 혹은 비활성인 레코드가 한 개도 없을 경우 수련원 캘린더 화면 표시되지 않음 (활성 혹은 비활성인 레코드 한 개 존재해야 함)</description>
    <inlineHelpText>수련원 신청 활성/비활성 관리를 위한 필드 (일반 수련원 신청 레코드의 경우 빈칸)</inlineHelpText>
    <label>구분</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
                <label>수련원신청 - 활성</label>
            </value>
            <value>
                <fullName>False</fullName>
                <label>수련원신청 - 비활성</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>