PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/Special__c.field-meta.xml
<CustomField>
    <fullName>Special__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>임직원 신청이 아닌 특별사유의 경우 체크해주세요</inlineHelpText>
    <label>특별사유</label>
    <type>Checkbox</type>
</CustomField>