PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>신청: 수련원 신청 상태, 확정: 수련원 신청 확정 상태, 실패: 수련원 신청 확정실패 상태, 취소: 수련원 신청 확정 이후 취소한 상태</inlineHelpText>
    <label>상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>신청</fullName>
                <default>true</default>
                <label>신청</label>
            </value>
            <value>
                <fullName>확정</fullName>
            </value>
            <value>
                <fullName>실패</fullName>
            </value>
            <value>
                <fullName>취소</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>