PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/fields/UseType__c.field-meta.xml
<CustomField>
    <fullName>UseType__c</fullName>
    <label>사용유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1박</fullName>
            </value>
            <value>
                <fullName>2박</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>