PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/validationRules/DoNotChange_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotChange_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;신청&apos; ),
   OR( ISCHANGED( RoomType__c ),
       ISCHANGED( UseType__c ),
       ISCHANGED( Date1__c ),
       ISCHANGED( Date2__c )
     )
  )</errorConditionFormula>
    <errorMessage>이미 신청된 레코드의 경우 객실유형, 사용유형, 사용일1, 사용일2 정보를 변경할 수 없습니다. 정보를 변경해야 하는 경우에는 해당 레코드를 삭제 후 신규로 신청해주세요.</errorMessage>
</ValidationRule>