PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/validationRules/DoNotChange_StatusToConfirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotChange_StatusToConfirmed</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(ISCHANGED( Status__c ), 
								OR( TEXT(PRIORVALUE(Status__c)) = &apos;실패&apos;,
  										TEXT(PRIORVALUE(Status__c)) = &apos;취소&apos;)
							),
			 TEXT(Status__c) = &apos;확정&apos;,
			FALSE
			)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>상태가 &apos;실패&apos; 혹은 &apos;취소&apos;일 경우 &apos;확정&apos;으로 변경할 수 없습니다.</errorMessage>
</ValidationRule>