PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/validationRules/DoNotChooseOtherDay.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotChooseOtherDay</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK( Date1__c ) = False, 
    ISBLANK( Date2__c ) = False,
    ABS( Date1__c - Date2__c ) &gt; 1
)</errorConditionFormula>
    <errorDisplayField>Date2__c</errorDisplayField>
    <errorMessage>2박인 경우 연박만 가능합니다.</errorMessage>
</ValidationRule>