PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/validationRules/RequiredFieldUseType.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredFieldUseType</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( UseType__c, &quot;&quot;)</errorConditionFormula>
    <errorMessage>사용 유형을 선택해 주세요. (&apos;1박&apos; 혹은 &apos;2박&apos;)</errorMessage>
</ValidationRule>