PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/listViews/ActiveMgmt.listView-meta.xml
<ListView>
    <fullName>ActiveMgmt</fullName>
    <columns>NAME</columns>
    <columns>Sort__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sort__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>⚙️ 수련원 신청 활성관리 (관리자용)</label>
    <sharedTo>
        <group>TCActiveMgmt</group>
    </sharedTo>
</ListView>