PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RoomType__c</columns>
    <columns>UseType__c</columns>
    <columns>Date1__c</columns>
    <columns>Date2__c</columns>
    <columns>Status__c</columns>
    <columns>Special__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sort__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>