PA_Education/TestMenifest/force-app/main/default/objects/ApplicationTrainingCenter__c/listViews/Main.listView-meta.xml
<ListView>
    <fullName>Main</fullName>
    <columns>NAME</columns>
    <columns>RoomType__c</columns>
    <columns>UseType__c</columns>
    <columns>Date1__c</columns>
    <columns>Date2__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RoomType__c</field>
        <operation>equals</operation>
        <value>본채</value>
    </filters>
    <filters>
        <field>Sort__c</field>
        <operation>equals</operation>
    </filters>
    <label>객실별 신청 현황 - 본채</label>
    <sharedTo>
        <group>TCActiveMgmt</group>
    </sharedTo>
</ListView>